most code for headless property and disallow startup when memory too low